Bug 404395 - Krita generates too many backup files for a single document.
Summary: Krita generates too many backup files for a single document.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (show other bugs)
Version: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-15 15:00 UTC by Tyson Tan
Modified: 2019-02-19 10:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2019-02-15 15:00:59 UTC
The recent Krita nightly builds generate multiple backup files, they fill up the document's directory and cause confusion. In the past, Krita only keeps one backup file for each document, which make more sense. I began to notice this roughly around the time of Zip64 library implication. Maybe we need an option named as "Enable Incremental Backups"?

Tested: krita-4.2.0-pre-alpha-1af5c34-x86_64.appimage
Comment 1 Halla Rempt 2019-02-15 15:50:55 UTC
 Well, that was intentional, actually... We were getting people who overwrote the single backup file and then wanted to get an older version back. I think we should make the number configurable, you're the second person noticing.
Comment 2 Tyson Tan 2019-02-16 02:37:12 UTC
(In reply to Boudewijn Rempt from comment #1)
>  Well, that was intentional, actually... We were getting people who
> overwrote the single backup file and then wanted to get an older version
> back. I think we should make the number configurable, you're the second
> person noticing.

KDE Plasma doesn't hide files with names ended with "~", I guess that's why not so many people noticed it (you'll have to use Linux and use Plasma). Considering how fast it's eating up SSD space, a backup number limit is definitely the way to go.
Comment 3 Halla Rempt 2019-02-18 10:37:09 UTC
See https://phabricator.kde.org/D19115
Comment 4 Halla Rempt 2019-02-18 16:07:53 UTC
Git commit 17ca133d6d54dcab848351070a8ed5549e14b3ed by Boudewijn Rempt.
Committed on 18/02/2019 at 14:46.
Pushed by rempt into branch 'rempt/T379-resource-management'.

Make all aspects of autosaving and backup files configurable

Autosaves of unnamed files can now be made visible (the dot
is omitted).

The number of backups kept can be set, the default is 1 again.
The location of backups can be chosen: same folder as the file,
$HOME or the tempdir.
The suffix used for the backup file can be chosen. There is
a validator to weed out potentially hazardous characters.

CCMAIL:kimageshop@kde.org
Differential Revision: https://phabricator.kde.org/D19115

M  +10   -6    libs/ui/KisApplication.cpp
M  +71   -41   libs/ui/KisDocument.cpp
M  +53   -9    libs/ui/dialogs/kis_dlg_preferences.cc
M  +228  -149  libs/ui/forms/wdggeneralsettings.ui

https://commits.kde.org/krita/17ca133d6d54dcab848351070a8ed5549e14b3ed
Comment 5 Tyson Tan 2019-02-19 00:51:51 UTC
Thank you, Boud! :D
Comment 6 Halla Rempt 2019-02-19 10:02:53 UTC
Git commit e0f5af950cbb5e765a3777329d46b30b8878c00c by Boudewijn Rempt.
Committed on 19/02/2019 at 08:30.
Pushed by rempt into branch 'master'.

Make all aspects of autosaving and backup files configurable

Autosaves of unnamed files can now be made visible (the dot
is omitted).

The number of backups kept can be set, the default is 1 again.
The location of backups can be chosen: same folder as the file,
$HOME or the tempdir.
The suffix used for the backup file can be chosen. There is
a validator to weed out potentially hazardous characters.

CCMAIL:kimageshop@kde.org
Differential Revision: https://phabricator.kde.org/D19115

M  +10   -6    libs/ui/KisApplication.cpp
M  +71   -41   libs/ui/KisDocument.cpp
M  +53   -9    libs/ui/dialogs/kis_dlg_preferences.cc
M  +228  -149  libs/ui/forms/wdggeneralsettings.ui

https://commits.kde.org/krita/e0f5af950cbb5e765a3777329d46b30b8878c00c